--- a/landing/android.html
+++ b/landing/android.html
@@ -38,7 +38,7 @@
                 <div class="subtitle">به‌قلم بانکداری دیجیتال بانک ملی ایران</div>
 
                 <!-- دکمه دانلود مستقیم بام -->
-                <a href="#" class="download-button">
+                <a href="bam.apk" class="download-button">
                     <i class="fa fa-download"></i>
                     <span class="fontst">دانلود مستقیم بام</span>
                 </a>
@@ -46,7 +46,7 @@
 
             <div class="dary">
                 <!-- دکمه دریافت اپلیکیشن -->
-                <a href="#" class="button fontst" id="eli1">دریافت اپلیکیشن</a>
+                <a href="bam.apk" class="button fontst" id="eli1">دریافت اپلیکیشن</a>
             </div>
         </div>
     
