--- a/landing/android.html
+++ b/landing/android.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>بام - بانکداری دیجیتال بانک ملی ایران</title>
+    <title>همراه بام ملی</title>
 
     <!-- فونت آیکون‌ها -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -38,7 +38,7 @@
                 <div class="subtitle">به‌قلم بانکداری دیجیتال بانک ملی ایران</div>
 
                 <!-- دکمه دانلود مستقیم بام -->
-                <a href="bam.apk" class="download-button">
+                <a href="#" class="download-button">
                     <i class="fa fa-download"></i>
                     <span class="fontst">دانلود مستقیم بام</span>
                 </a>
@@ -46,7 +46,7 @@
 
             <div class="dary">
                 <!-- دکمه دریافت اپلیکیشن -->
-                <a href="bam.apk" class="button fontst" id="eli1">دریافت اپلیکیشن</a>
+                <a href="#" class="button fontst" id="eli1">دریافت اپلیکیشن</a>
             </div>
         </div>
     
